# carros

./: .env.example  .gitignore  Idealização do Projeto.md  README.md  fix_n8n.js  package-lock.json  package.json
.github/workflows/: ci.yml
agent/: .env.example  README.md  pyproject.toml
agent/app/: config.py  ingestion.py  llm.py  main.py  parsing.py  schemas.py  supabase_client.py
agent/app/agents/: analista.py  mcqueen.py
agent/app/tools/: busca_interna.py  google_search.py
agent/tests/: conftest.py  test_analista.py  test_busca_interna.py  test_config.py  test_google_search.py  test_ingestion.py  test_llm.py  test_mcqueen.py  test_parsing.py  test_routes.py  test_schemas.py  test_supabase_client.py
docs/superpowers/plans/: 2026-05-11-langchain-agent-migration.md  2026-05-13-mcqueen-red-snowfall.md
docs/superpowers/specs/: 2026-05-11-langchain-agent-migration-design.md  2026-05-13-mcqueen-red-snowfall-design.md
src/: App.tsx  index.css
src/components/: AnalysisNarrative.tsx  ChronicProblemsAlert.tsx  DashboardStatus.tsx  Header.tsx  TCOTable.tsx
src/hooks/: useCarAnalysis.ts  useReducedMotion.ts
src/services/: api.ts
