[project]
name = "carros-agent"
version = "0.1.0"
description = "Agente Python/LangChain para análise de carros usados (substitui n8n)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "langchain>=0.3.10",
  "langchain-openai>=0.2.10",
  "langgraph>=0.2.50",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "anyio>=4.6",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
